Remove deprecated property